Added structure to portal

--- a/Client Portal/Client Portal.csproj
+++ b/Client Portal/Client Portal.csproj
@@ -74,6 +74,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="pages\" />
+    <Folder Include="portal\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
