--- a/Client Portal/Web.config
+++ b/Client Portal/Web.config
@@ -29,7 +29,8 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/></system.web>
+		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+  </system.web>
 	<!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
