--- a/Clear Choice/Clear Choice.csproj
+++ b/Clear Choice/Clear Choice.csproj
@@ -99,8 +99,8 @@
     <Reference Include="WPFToolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Views\App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
+    <Compile Include="Views\ActiveLotsReport.xaml.cs">
+      <DependentUpon>ActiveLotsReport.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -117,9 +117,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="Views\ActiveLotReport.xaml.cs">
-      <DependentUpon>ActiveLotReport.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CityReport.xaml.cs">
       <DependentUpon>CityReport.xaml</DependentUpon>
@@ -157,6 +154,9 @@
     <Compile Include="Views\LotRepairView.xaml.cs">
       <DependentUpon>LotRepairView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\LotServicesAmountReport.xaml.cs">
+      <DependentUpon>LotServicesAmountReport.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LotView.xaml.cs">
       <DependentUpon>LotView.xaml</DependentUpon>
     </Compile>
@@ -165,9 +165,6 @@
     </Compile>
     <Compile Include="Views\RepairsCompletedReport.xaml.cs">
       <DependentUpon>RepairsCompletedReport.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ScheduledRepairs.xaml.cs">
-      <DependentUpon>ScheduledRepairs.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SiteView.xaml.cs">
       <DependentUpon>SiteView.xaml</DependentUpon>
@@ -197,11 +194,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\App.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="Views\ActiveLotsReport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -240,10 +235,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Resources\Views\TimeSheetViewDict.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\ActiveLotReport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -309,6 +300,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\LotServicesAmountReport.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\LotView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -322,10 +317,6 @@
     <Page Include="Views\RepairsCompletedReport.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\ScheduledRepairs.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\SiteView.xaml">
       <SubType>Designer</SubType>
