--- a/Clear Choice/Clear Choice.csproj
+++ b/Clear Choice/Clear Choice.csproj
@@ -123,8 +123,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Views\AvgLabourHoursPerHouse.xaml.cs">
-      <DependentUpon>AvgLabourHoursPerHouse.xaml</DependentUpon>
+    <Compile Include="Views\TotalLabourCost.xaml.cs">
+      <DependentUpon>TotalLabourCost.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CityReport.xaml.cs">
       <DependentUpon>CityReport.xaml</DependentUpon>
@@ -134,6 +134,9 @@
     </Compile>
     <Compile Include="Views\ClientView.xaml.cs">
       <DependentUpon>ClientView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TotalMaterialCost.xaml.cs">
+      <DependentUpon>TotalMaterialCost.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\HomeView.xaml.cs">
       <DependentUpon>HomeView.xaml</DependentUpon>
@@ -177,8 +180,8 @@
     <Compile Include="Views\TimeSheetView.xaml.cs">
       <DependentUpon>TimeSheetView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\TotalBilling.xaml.cs">
-      <DependentUpon>TotalBilling.xaml</DependentUpon>
+    <Compile Include="Views\LotsTotalBilled.xaml.cs">
+      <DependentUpon>LotsTotalBilled.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TotalExtraBilling.xaml.cs">
       <DependentUpon>TotalExtraBilling.xaml</DependentUpon>
@@ -258,7 +261,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\AvgLabourHoursPerHouse.xaml">
+    <Page Include="Views\TotalLabourCost.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -275,6 +278,10 @@
     <Page Include="Views\ClientView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\TotalMaterialCost.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -354,7 +361,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\TotalBilling.xaml">
+    <Page Include="Views\LotsTotalBilled.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -419,6 +426,11 @@
     <Content Include="libs\mysql.data.entity.dll" />
     <Content Include="libs\mysql.visualstudio.dll" />
     <Content Include="libs\mysql.web.dll" />
+    <Resource Include="Resources\Icons\check-icon.png" />
+    <Resource Include="Resources\Icons\clock-icon.png" />
+    <Resource Include="Resources\Icons\Symbol-Refresh.png" />
+    <Resource Include="Resources\Icons\Symbol-Restricted.png" />
+    <Resource Include="Resources\Icons\reports-icon.png" />
     <Resource Include="Resources\Icons\symbol-emptycart.png" />
     <Resource Include="Resources\Icons\symbol-timesheet.png" />
     <Resource Include="Resources\Icons\symbol-timesheets.png" />
