Changed ClientView to ISTabView interface and continuing the adding of other views to the interface.
Signed-off-by: Phillip Couto <phillip.couto@stemstudios.com>

--- a/StemStudiosControls/UIControls.csproj
+++ b/StemStudiosControls/UIControls.csproj
@@ -95,6 +95,7 @@
     <Compile Include="CategoryExpander.xaml.cs">
       <DependentUpon>CategoryExpander.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ISTabView.cs" />
     <Compile Include="ISTabContent.cs" />
     <Compile Include="SComboBox.xaml.cs">
       <DependentUpon>SComboBox.xaml</DependentUpon>
